--- a/Lights/Base.lproj/Main.storyboard
+++ b/Lights/Base.lproj/Main.storyboard
@@ -23,11 +23,13 @@
                                     <constraint firstAttribute="height" constant="85" id="RwS-60-rHn"/>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="230" id="nfI-di-7MD"/>
                                 </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Button">
-                                    <fontDescription key="titleFontDescription" type="system" pointSize="30"/>
-                                </buttonConfiguration>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="START"/>
+                                <connections>
+                                    <action selector="startButtonPressed" destination="BYZ-38-t0r" eventType="touchUpInside" id="YGx-lS-Fkv"/>
+                                </connections>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="CAX-xL-4Yq">
                                 <rect key="frame" x="145" y="74" width="100" height="358"/>
@@ -60,6 +62,12 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="6mI-4P-ac4" secondAttribute="bottom" constant="25" id="pq0-rL-Mxl"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="greenLight" destination="wxd-zv-uyI" id="Yxb-yD-FJl"/>
+                        <outlet property="redLight" destination="sgP-Uu-HzB" id="kgL-yk-f73"/>
+                        <outlet property="startButton" destination="6mI-4P-ac4" id="1BU-V0-d9z"/>
+                        <outlet property="yellowLight" destination="QdS-z6-4b0" id="UmO-xs-hfN"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
